diagnostic for finding Java libs

--- a/.github/workflows/build-jnilib.yml
+++ b/.github/workflows/build-jnilib.yml
@@ -15,5 +15,7 @@ jobs:
       - run: |
           java -version
           ant -version
+          ls /Library/Java/JavaVirtualMachines/
+          echo $JAVA_HOME
           ant -f plugins/OSX/build.xml 
       
