--- a/plugins/OSX/build.xml
+++ b/plugins/OSX/build.xml
@@ -11,6 +11,8 @@
 	</target>
 
 	<target name="compile">
+	    <echo message="compile step configured with -I${JAVA_HOME}/include"/>
+
 		<apply dir="${dstdir}" executable="${compiler}" os="Mac OS X" skipemptyfilesets="true" failonerror="true" dest="${dstdir}">
 		    <!-- Depending on the JRE you have installed, you may need to change the path in the following line in two places -->
 			<arg line="${cflags} -O2 -Wall -c -fPIC -I../../../../common/src/native/ -I ../../generated-sources/natives/ -I${JAVA_HOME}/include -I${JAVA_HOME}/include/darwin "/>
