--- a/plugins/OSX/build.xml
+++ b/plugins/OSX/build.xml
@@ -10,12 +10,14 @@
 		<mkdir dir="target/natives/x86_64"/>
 	</target>
 
+    <property environment="env"/>
+    
 	<target name="compile">
-	    <echo message="compile step configured with -I${JAVA_HOME}/include"/>
+	    <echo message="compile step configured with -I${env.JAVA_HOME}/include"/>
 
 		<apply dir="${dstdir}" executable="${compiler}" os="Mac OS X" skipemptyfilesets="true" failonerror="true" dest="${dstdir}">
 		    <!-- Depending on the JRE you have installed, you may need to change the path in the following line in two places -->
-			<arg line="${cflags} -O2 -Wall -c -fPIC -I../../../../common/src/native/ -I ../../generated-sources/natives/ -I${JAVA_HOME}/include -I${JAVA_HOME}/include/darwin "/>
+			<arg line="${cflags} -O2 -Wall -c -fPIC -I../../../../common/src/native/ -I ../../generated-sources/natives/ -I${env.JAVA_HOME}/include -I${env.JAVA_HOME}/include/darwin "/>
 			<mapper type="glob" from="*.c" to="*.o"/>
 			<fileset dir="src/main/native" includes="*.c"/>
 			<fileset dir="../common/src/native" includes="*.c"/>
